# lora_gateway

./: .clang_complete  CMakeLists.txt  sdkconfig  sdkconfig.old
components/communication/: CMakeLists.txt  communication.c  component.mk
components/communication/include/: communication.h
components/security/: CMakeLists.txt  component.mk  security.c
components/security/include/: security.h
components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306_i2c.c  ssd1306_spi.c
components/ssd1306/include/: font8x8_basic.h  ssd1306.h
components/storage_manager/: storage_manager.c
components/storage_manager/include/: storage_manager.h
components/time_manager/: CMakeLists.txt  component.mk  time_manager.c
components/time_manager/include/: time_manager.h
components/web_server/: CMakeLists.txt  api.cpp  component.mk  system.cpp  templates.cpp  web_server.cpp
components/web_server/include/: web_server.h
data/components/: footer.html  header1.html  header2.html
data/js/: main.js
data/pages/: changesecrets.html  index.html  info.html  infoscript.html  login.html
data/style/: style.css
main/: CMakeLists.txt  loragateway.c
server_certs/: cacert.pem  certificate.p12  certificate.pem  google.pem  prvtkey.pem
